--- a/tvix/eval/Cargo.toml
+++ b/tvix/eval/Cargo.toml
@@ -14,15 +14,20 @@ codemap = "0.1.3"
 codemap-diagnostic = "0.1.1"
 dirs = "4.0.0"
 genawaiter = { version = "0.99.1", default_features = false }
-imbl = { version = "2.0", features = [ "serde" ] }
+imbl = { version = "2.0", features = ["serde"] }
 lazy_static = "1.4.0"
 lexical-core = { version = "0.8.5", features = ["format", "parse-floats"] }
 path-clean = "0.1"
-proptest = { version = "1.0.0", default_features = false, features = ["std", "alloc", "break-dead-code", "tempfile"], optional = true }
+proptest = { version = "1.0.0", default_features = false, features = [
+    "std",
+    "alloc",
+    "break-dead-code",
+    "tempfile",
+], optional = true }
 regex = "1.6.0"
 rnix = "0.11.0"
 rowan = "*" # pinned by rnix
-serde = { version = "1.0", features = [ "rc", "derive" ] }
+serde = { version = "1.0", features = ["rc", "derive"] }
 serde_json = "1.0"
 smol_str = "0.2.0"
 tabwriter = "1.2"
@@ -31,6 +36,7 @@ toml = "0.6.0"
 xml-rs = "0.8.4"
 
 [dev-dependencies]
+expect-test = "1.4.1"
 criterion = "0.4"
 pretty_assertions = "1.2.1"
 itertools = "0.10.3"
