--- a/tvix/store/Cargo.toml
+++ b/tvix/store/Cargo.toml
@@ -29,6 +29,7 @@ futures = "0.3.28"
 bytes = "1.4.0"
 smol_str = "0.2.0"
 serde_json = "1.0"
+url = "2.3.1"
 
 [dependencies.tonic-reflection]
 optional = true
