chore(users/Profpatsch/cas-serve): update cabal file & pa-label
Change-Id: Ic0fb423fb2e8fc4d829c0c0f19b38ed3fe8db718

--- a/users/Profpatsch/hie.yaml
+++ b/users/Profpatsch/hie.yaml
@@ -8,4 +8,5 @@ cradle:
       component: "lib:htmx-experiment"
     - path: "./htmx-experiment/Main.hs"
       component: "htmx-experiment:exe:htmx-experiment"
-
+    - path: "./cas-serve/CasServe.hs"
+      component: "cas-serve:exe:cas-serve"
