--- a/corp/rih/Cargo.toml
+++ b/corp/rih/Cargo.toml
@@ -7,14 +7,15 @@ edition = "2021"
 
 [dependencies]
 fuzzy-matcher = "0.3.7"
+getrandom = { version = "0.2", features = ["js"] }
 gloo = "0.8"
+js-sys = "0.3"
+rand = "0.8"
 rust_iso3166 = "0.1.10"
 serde_json = "1.0"
 serde_urlencoded = "*" # pinned by yew
 yew = { version = "0.20", features = ["csr"] }
 yew-router = "0.17"
-rand = "0.8"
-getrandom = { version = "0.2", features = ["js"] }
 
 # needs to be in sync with nixpkgs
 wasm-bindgen = "= 0.2.84"
