--- a/corp/rih/Cargo.toml
+++ b/corp/rih/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = "1.0"
 serde_urlencoded = "*" # pinned by yew
 yew = { version = "0.20", features = ["csr"] }
 yew-router = "0.17"
+wasm-bindgen-futures = "0.4"
 
 # needs to be in sync with nixpkgs
 wasm-bindgen = "= 0.2.84"
