feat(users/Profpatsch/jbovlaste-sqlite): add XML parser
nice.

Change-Id: Iea90578742bfb689cd0508dbaf641c31aed577ad

--- a/users/Profpatsch/jbovlaste-sqlite/jbovlaste-sqlite.cabal
+++ b/users/Profpatsch/jbovlaste-sqlite/jbovlaste-sqlite.cabal
@@ -63,6 +63,8 @@ executable jbovlaste-sqlite
         pa-error-tree,
         my-prelude,
         containers,
+        selective,
+        semigroupoids,
         bytestring,
         arglib-netencode,
         netencode,
