feat(users/Profpatsch/jbovlaste-sqlite): add XML parser
nice.

Change-Id: Iea90578742bfb689cd0508dbaf641c31aed577ad

--- a/users/Profpatsch/jbovlaste-sqlite/jbovlaste-sqlite.cabal
+++ b/users/Profpatsch/jbovlaste-sqlite/jbovlaste-sqlite.cabal
@@ -61,8 +61,12 @@ executable jbovlaste-sqlite
         pa-prelude,
         pa-label,
         pa-error-tree,
+        pa-field-parser,
         my-prelude,
         containers,
+        selective,
+        semigroupoids,
+        validation-selective,
         bytestring,
         arglib-netencode,
         netencode,
