feat(users/Profpatsch/jbovlaste-sqlite): create jbovlaste sqlite
Change-Id: I7be8f158eb8af6a88d9edca5bd91451a87f1c96f

--- a/users/Profpatsch/jbovlaste-sqlite/jbovlaste-sqlite.cabal
+++ b/users/Profpatsch/jbovlaste-sqlite/jbovlaste-sqlite.cabal
@@ -67,6 +67,9 @@ executable jbovlaste-sqlite
         selective,
         semigroupoids,
         validation-selective,
+        sqlite-simple,
+        foldl,
+        conduit,
         bytestring,
         arglib-netencode,
         netencode,
