--- a/corp/rih/backend/Cargo.toml
+++ b/corp/rih/backend/Cargo.toml
@@ -3,6 +3,17 @@ name = "rih-backend"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies]
+anyhow = "1.0"
+serde = { version = "1.0", features = [ "derive" ] }
+serde_json = "1.0"
+uuid = { version = "1.3.3", features = ["v4", "serde"] }
+
 [dependencies.rouille]
-version = "3.6.2"
+version = "3.6"
+default-features = false
+
+[dependencies.rust-s3]
+version = "0.33"
 default_features = false
+features = [ "sync-rustls-tls" ]
