--- a/corp/rih/frontend/Cargo.toml
+++ b/corp/rih/frontend/Cargo.toml
@@ -20,6 +20,7 @@ wasm-bindgen-futures = "0.4"
 
 # needs to be in sync with nixpkgs
 wasm-bindgen = "= 0.2.84"
+uuid = { version = "1.3.3", features = ["v4", "serde"] }
 
 [dependencies.serde]
 version = "*" # pinned by yew
