--- a/corp/rih/backend/Cargo.toml
+++ b/corp/rih/backend/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
+log = "0.4"
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 uuid = { version = "1.3.3", features = ["v4", "serde"] }
@@ -15,5 +16,5 @@ default-features = false
 
 [dependencies.rust-s3]
 version = "0.33"
-default_features = false
+default-features = false
 features = [ "sync-rustls-tls" ]
