--- a/corp/rih/backend/Cargo.toml
+++ b/corp/rih/backend/Cargo.toml
@@ -10,6 +10,11 @@ serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 uuid = { version = "1.3.3", features = ["v4", "serde"] }
 
+[dependencies.attohttpc]
+version = "0.22"
+default-features = false
+features = [ "tls-rustls" ]
+
 [dependencies.rouille]
 version = "3.6"
 default-features = false
