fix(ops/yandex-cloud-rs): fix dev-dependencies for examples
Change-Id: Ib99755d2b49464a6a30442b696ecfeda03038066

--- a/ops/yandex-cloud-rs/Cargo.toml
+++ b/ops/yandex-cloud-rs/Cargo.toml
@@ -19,3 +19,6 @@ features = [ "tls", "tls-roots", "gzip" ]
 [build-dependencies]
 tonic-build = "0.9"
 walkdir = "2.3.3"
+
+[dev-dependencies]
+tokio = "1.28" # check when updating tonic
