--- a/ops/yandex-cloud-rs/Cargo.toml
+++ b/ops/yandex-cloud-rs/Cargo.toml
@@ -19,3 +19,6 @@ features = [ "tls", "tls-roots", "gzip" ]
 [build-dependencies]
 tonic-build = "0.9"
 walkdir = "2.3.3"
+
+[dev-dependencies]
+tokio = "*" # pinned by tonic
