--- a/users/tazjin/yddns/Cargo.toml
+++ b/users/tazjin/yddns/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.71"
-crimp = "4087.0.0"
-tokio = "1.28.2"
-tonic = "0.9.2"
-yandex-cloud = "2023.5.23"
+anyhow = "1.0"
+crimp = "4087.0"
+tokio = "*" # pulled in by yandex-cloud
+yandex-cloud = "2023.6.13"
