feat(users/Profpatsch/whatcd-resolver): Add server-side search
Change-Id: Ifbbe3bca6988b0a090f456ae8d9dbaa808c89e19

--- a/users/Profpatsch/whatcd-resolver/whatcd-resolver.cabal
+++ b/users/Profpatsch/whatcd-resolver/whatcd-resolver.cabal
@@ -62,6 +62,7 @@ library
        Postgres.MonadPostgres
        Tool
        ValidationParseT
+       Multipart2
 
     build-depends:
         base >=4.15 && <5,
@@ -90,6 +91,10 @@ library
         unix,
         warp,
         wai,
+        wai-extra,
         ihp-hsx,
         blaze-html,
+        bytestring,
+        dlist,
+        selective
 
