--- a/tvix/store/Cargo.toml
+++ b/tvix/store/Cargo.toml
@@ -31,6 +31,7 @@ bytes = "1.4.0"
 smol_str = "0.2.0"
 serde_json = "1.0"
 url = "2.4.0"
+tonic-web = "0.9.2"
 
 [dependencies.fuser]
 optional = true
