refactor(tvix/cli/refscan): use wu-manber crate with &[u8] support
PR'ed at https://github.com/tvlfyi/wu-manber/pull/1.

Change-Id: I8c71e359196396a1d42a3ea2ab7ac15b137b2db0

--- a/tvix/cli/Cargo.toml
+++ b/tvix/cli/Cargo.toml
@@ -21,4 +21,5 @@ thiserror = "1.0.38"
 bytes = "1.4.0"
 
 [dependencies.wu-manber]
-git = "https://github.com/tvlfyi/wu-manber.git"
+git = "https://github.com/flokli/wu-manber.git"
+branch = "bytes"
