--- a/users/Profpatsch/whatcd-resolver/whatcd-resolver.cabal
+++ b/users/Profpatsch/whatcd-resolver/whatcd-resolver.cabal
@@ -69,6 +69,8 @@ library
         pa-label,
         pa-json,
         pa-field-parser,
+        pa-pretty,
+        pa-run-command,
         aeson-better-errors,
         aeson,
         blaze-html,
